https://x.com/djjazzyjeff215/status/1852816726960070819 @blackgirlscode please tell normani i called erika/latto a whore @nasa-jpl @nasa im angry they injecting mean pics to let me know abt they sex with playboy i want @deptofdefense to look at playboy as a nasty neighbor @whitehouse

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -8,6 +8,17 @@ by Matt Graham
 @import "rouge-base16-dark";
 
 
+html { 
+
+
+  height:100vh;
+  background-color: #002DE0; /* For browsers that do not support gradients 
+    background-image: linear-gradient(#002DE0, #0032A0); */
+    background: rgb(0,45,224);
+  background: linear-gradient(90deg, rgba(0,45,224,1) 0%, rgba(0,50,160,1) 90%);
+
+}
+
 
 body {
   font:14px/22px 'Courier New', 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -287,15 +298,37 @@ header {
 }
 
 section {
-  width:590px;
-  padding: 30px 30px 50px 30px;
-  margin: 20px 0;
-  margin-top: 190px;
   position:relative;
-  background: #fbfbfb;
-  border-radius: 3px;
-  border: 1px solid #cbcbcb;
-  box-shadow: 0px 1px 2px rgba(0,0,0,.09), inset 0px 0px 2px 2px rgba(255,255,255,.5), inset 0 0 5px 5px rgba(255,255,255,.4);
+
+  padding: 10px;
+  border-radius: 0px 0px 0px 0px;
+  width: 90vw; 
+  scrollbar-color: #595959 #262626;
+  scrollbar-width: thin;
+  padding: 0px;
+  height: 100vh;
+ /* overflow-y: auto; */
+  
+  margin-top: -185px;
+  margin-bottom: 40px;
+  margin-right: auto;
+  margin-left: auto; 	
+  border: 1px solid white;
+  text-align:left; 
+  voice-family:inherit;
+  box-shadow: rgba(255,255,255, 0.4) 5px 5px, rgba(255,255,255, 0.3) 10px 10px, rgba(255,255,255, 0.2) 15px 15px, rgba(255,255,255, 0.1) 20px 20px, rgba(255,255,255, 0.05) 25px 25px;
+  /* background : #0D0D0D;
+  background-image :
+    linear-gradient(#262626 1px, transparent 0),
+    linear-gradient(90deg, #262626 1px, transparent 0), ;
+  background-size: 30px 30px;
+    background-attachment: fixed;   
+ background-image: 
+   url(https://raw.githubusercontent.com/ricoThaka/rashardmro/refs/heads/master/assets/images/nasalogo_whitetext_redwing.svg), */
+  
+linear-gradient(45deg, #2BFF88 0%, #2BD2FF 52%, #FA8BFF 90%);
+background-size: cover;/*now this is known for the safari*/
+background-attachment: fixed;    
 }
 
 small {
