--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -9,9 +9,16 @@ html {
   font:14px/22px 'Courier New', monospace, 'Martian Mono',Arial,  "Lucida Sans Unicode", verdana, lucida, sans-serif; 
    height:100vh;
   background-color: #002DE0; /* For browsers that do not support gradients 
-    background-image: linear-gradient(#002DE0, #0032A0); */
+    background-image: linear-gradient(#002DE0, #0032A0); 
     background: rgb(0,45,224);
   background: linear-gradient(90deg, rgba(0,45,224,1) 0%, rgba(0,50,160,1) 90%);
+  */background: url(https://eoimages.gsfc.nasa.gov/images/imagerecords/153000/153466/pyramidlake_oli2_20241008_lrg.jpg) no-repeat 0 0 fixed; 
+  background-size: cover;
+   line-height: 1.5;
+   -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   height: 100vh;
   width: 100vw;
   column-fill: balance;
