--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,10 +36,40 @@
         {{ content }}
 
 
+        <div id="footer">
 
+    
+          <div class="logo"><a href="https://ricothaka.github.io/">./HoleToAnotherUniverse</a></div>  
+          
+          
+          
+          
+          
+          
+          <div class="css3badge">   <a href="https://github.com/ricothaka">
+            <img style="border:0;width:119px;height:31px"
+                src="https://github.githubassets.com/assets/GitHub-Logo-ee398b662d42.png
+                "
+                alt="ricothaka" />
+          </a>  
+             </div>
+          
+                <div class="css3badge"><a href="https://jigsaw.w3.org/css-validator/check/referer">
+                  <img style="border:0;width:88px;height:31px"
+                      src="http://jigsaw.w3.org/css-validator/images/vcss"
+                      alt="Valid CSS!" />
+              </a>
+                  
+                </div>
+          
+          
+          
+          
+              </div>
+  </div>
 
-        <p>layout: default
-          title: HoleToAnotherUniVersE</p>
+        > layout: default
+         > title: HoleToAnotherUniVersE 
           
           <div class="swatch">
               <div></div>
