flex-direction: column;

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <IMG src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/NASA_Worm_logo.svg/508px-NASA_Worm_logo.svg.png" />
     </div>  -->
 
-      <section class="floatleft floatright">
+      <content class="floatleft floatright">
         {{ content }}
 
 
@@ -2732,7 +2732,7 @@
               </div>
           
 
-      </section>
+            </content>
 
     </div>
     <script type="text/javascript" src="/js/lightbox.js"></script>
