https://youtu.be/tuuiCRE9NX8?t=2362 @blackgirlscode its rashard and i was sending u messages bc i saw normani an she did not tell me to stop, no one will tell me to stop @nasa-jpl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <IMG src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/NASA_Worm_logo.svg/508px-NASA_Worm_logo.svg.png" />
     </div>  -->
 
-      <content class="floatleft floatright">
+      <content id="content" class="floatleft floatright">
         {{ content }}
 
 
