--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -73,16 +73,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   border-radius: 0px 0px 0px 0px;
-  margin-top: 0px;
-width: 85vh; 
+  width: 85vh; 
 padding: 0px;
   margin-bottom: 40px;
   margin-right: auto;
   margin-left: auto;
   margin-top: -188px;
   line-height: 1.5;
-margin-right: auto;
-margin-left: auto; 	
 /* opera does not like 'margin:20px auto' */
 /* background: #666; */
 border: 1px solid white;
@@ -306,6 +303,15 @@ strong {
 }
 
 section img {
+  max-height: auto;
+  max-width: 100%;
+
+
+
+}
+
+
+content img {
   max-height: auto;
   max-width: 100%;
 
@@ -545,11 +551,12 @@ nav {
     display: none;
   }
 
-  header, section, footer {
+  header, section, content, footer {
     float:none;
 
     h1 {
       white-space: nowrap;
+      background-color: #002DE0;
       overflow: hidden;
       text-overflow: ellipsis;
       -o-text-overflow: ellipsis;
@@ -573,6 +580,14 @@ nav {
   }
 
   section {
+    border:1px solid #e5e5e5;
+    border-width:1px 0;
+    padding:20px 0;
+    margin: 190px auto 20px;
+    max-width: 600px;
+  }
+
+  content {
     border:1px solid #e5e5e5;
     border-width:1px 0;
     padding:20px 0;
@@ -630,6 +645,12 @@ nav {
     width: auto;
   }
 
+  content {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    width: auto;
+  }
+
   header ul, header p.view {
     position:static;
   }
@@ -656,7 +677,9 @@ nav {
   section {
     margin-top: 0px;
   }
-
+  content {
+    margin-top: 0px;
+  }
   #banner { display: none;}
   header ul {
     display:none;
