--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -39,7 +39,7 @@ body {
 
 .featured-post {
   height: 400px;
-  margin: 5px 10px 10px;
+  margin: 0px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -169,7 +169,7 @@ margin: 20px;
 display:block;}
 
 p:first-of-type {
-   color:limegreen; 
+   color:dodgerblue; 
   }
 
 
