--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <ul></ul>
       </nav>
 
-      <header>
+      <header class="top-container">
         <img src="https://raw.githubusercontent.com/ricoThaka/rashardmro/refs/heads/master/assets/images/nasalogo_whitetext_redwing.svg" width="500" />
         </header>
 <!-- wormLOGO 
