--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2715,15 +2715,25 @@
       </section>
 
     </div>
-    <script type="text/javascript" src="/js/lightbox.js"></script>
+  <script type="text/javascript" src="/js/lightbox.js"></script>
 <link rel="stylesheet" href="/css/lightbox.css">
   </body>
 
-  {% if page.mermaid %}
   <script type="module">
-    import mermaid from '/js/mermaid.esm.min.mjs';
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@11/dist/mermaid.esm.min.mjs';
     mermaid.initialize({ startOnLoad: true });
   </script>
+</html>
 
-  {% endif %}
+<script type="text/javascript" src="/js/lightbox.js"></script>
+<link rel="stylesheet" href="/css/lightbox.css">
+</body>
+
+{% if page.mermaid %}
+<script type="module">
+import mermaid from '/js/mermaid.esm.min.mjs';
+mermaid.initialize({ startOnLoad: true });
+</script>
+
+{% endif %}
 </html>
