--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-
+<div class="wrapper" >
 <article>
   <h2>{{ page.title }}</h2>
   <time datetime="{{ page.date | date_to_xmlschema }}" class="by-line">{{ page.date | date_to_string }}</time>
   {{ content }}
 </article>
+</div>
