--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -423,8 +423,9 @@ strong {
   color: #14e4ff;
 }
 
+.mermaid { width: 100%;}
 .wrapper {
-  width:650px;
+ /* width:650px; */
   margin:0 auto;
   position:relative;
 
