--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -128,7 +128,80 @@ p:first-of-type {
   .featured-post h1 {
     margin: 10px;
   }
-
+  .post-content {
+    width: 600px;
+    display: block;
+    margin: 10px auto 10px;
+  }
+  .post-date {
+    display: block;
+    margin-bottom: 1rem;
+    color: #9a9a9a;
+    font-size:0.8rem;
+  }
+  .featured-image img {
+    align: middle;
+    margin: 5px auto 25px;
+    display: block;
+    max-width: 600px;
+  }
+  .featured-post {
+    height: 400px;
+    margin: 5px 10px 10px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+  .featured-post h2 {
+    bottom: 0;
+    margin: 0;
+    padding: 10px;
+    position: absolute;
+  }
+  .featured-post h2 span {
+    display: inline-block;
+    color: white;
+    font: bold 24px/45px Helvetica, Sans-Serif;
+    letter-spacing: -1px;
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+  }
+  .featured-post span a {
+    color: white;
+  }
+  .featured-post h1 {
+    margin: 10px;
+  }
+  
+  /*
+    Pagination
+  */
+  
+  .pagination {
+    text-align: center;
+  }
+  .pagination a {
+    text-decoration: none;
+  }
+  .pagination-button {
+    color: #999;
+    border: 1px solid #e0e0e0;
+    padding: 15px 45px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .pagination-active {
+    color: black;
+  }
+  .pagination-active:hover {
+    background-color: #e0e0e0;
+  }
+  
   
   img[src*="cloudfront"] {width: 100%;
     border-bottom:solid 10px  #FCE30070;}
