https://ricothaka.github.io

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         <IMG src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/NASA_Worm_logo.svg/508px-NASA_Worm_logo.svg.png" />
     </div>  -->
 
-      <section class="floatleft floatright">
+      <section class="floatleft floatright animate pop">
         {{ content }}
 
         <p>layout: default
