--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -344,22 +344,25 @@ p:first-of-type {
     margin: 10px;
   }
   
-  img[src*="cloudfront"] {width: 100%;
+
+
+img[src*="workflows/ci.yaml/badge.svg"] {width: 100%;}
+img[src*="https://badge.fury.io"] {width: 100%;}
+img[src*="img.shields.io/badge/Social-ricoThaka"] {width: 100%;}
+img[src*="cloudfront"] {width: 100%;
     border-bottom:solid 10px  #FCE30070;}
-  img[alt*="USGS"] {width: 100%;
+img[alt*="USGS"] {width: 100%;
     border-bottom:solid 10px  #BF785E;}
   /* matches selection in URL/src */
-  img[src*="nasa.gov"] {width: 100%;
+img[src*="nasa.gov"] {width: 100%;
     border-bottom:solid 10px  #c9ff2340;}
-  img[alt="kk"] {
-    width: 100%;
-    
-  }
-  img[alt="whiteslavery"] {
+img[alt="kk"] {
+    width: 100%;}
+img[alt="whiteslavery"] {
     max-width: 15%;
     float: right;
   }
-  img[alt="whiteslavery40"] {
+img[alt="whiteslavery40"] {
     max-width: 40%;
     transform: rotate(45deg);
   }
