--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -23,7 +23,7 @@ html {
      /* background-image: url("https://fgbg.art/static/aof3_library-3f491fd56f7a36828c14e5b3c02c2327.gif"); AoF3 Library */
     /* background-image: url("https://fgbg.art/static/motw_downtown-cb25d556c94dde722c37d5cad1c924a6.gif"); dr wiley mvc */
     /* background: url(https://raw.githubusercontent.com/ricoThaka/ricothaka.github.io/master/assets/MOSHED-2024-3-4-13-41-24.jpg) no-repeat 0 0 fixed; */
-    background: url(https://landsat.gsfc.nasa.gov/wp-content/uploads/2013/12/San_Fran_old_432.jpg no-repeat 0 0 fixed; 
+    background: url(https://landsat.gsfc.nasa.gov/wp-content/uploads/2013/12/San_Fran_old_432.jpg) no-repeat 0 0 fixed; 
     background-size: cover;
      line-height: 1.5;
      -webkit-background-size: cover;
@@ -69,10 +69,16 @@ word-break: break-all;
 hyphens: auto;
 margin: 20px;
 display:block;}
-
 p:first-of-type {
-   color:limegreen; 
-  }
+  animation-duration: 3s;
+  animation-name: slidein;
+  color:white;
+}
+p::first-letter {
+  font-size: 1.2em;
+  font-weight: bold;
+    color: cyan;
+}
 
 
   a {
